# mcp-mediawiki

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  Usage.md  docker-compose.yml  entrypoint.sh  mcp_mediawiki.py  pyproject.toml  requirements.txt  settings.json
tests/: test_server.py
