[project]
name = "mcp-mediawiki"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for MediaWiki, enabling AI language models to search and retrieve wiki content"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.4,<2.4.0",
    "mcp>=1.8.0,<2.0.0",
    "pydantic>=2.0.0,<2.12.0",
    "mwclient>=0.10.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.27.1",
]

[[project.authors]]
name = "OptiscanGroup"
email = "jason.viloria@optiscangroup.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Single file module at root
include = ["mcp_mediawiki.py"]

[tool.hatch.build.targets.sdist]
include = ["mcp_mediawiki.py", "README.md", "LICENSE"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
]
